EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==05/11/2009==
demonstar55: Added a function to allow Perl to check augments within items.
cavedude: Increased bind wound skill up speed some.

==05/10/2009==
KLS: Fix for a add/remove raid looter across zones error.
KLS: Changed order of split raid exp, ensures amount given to a player is always at least 1.
KLS: (tsowl) Various Fixes

==05/09/2009==
realityincarnate: Modified quest::say to allow npcs to speak in other languages, added $langid quest variable
realityincarnate: Made low language skill/drunkenness a bit less understandable
realityincarnate: Duplicate lore items from foraging/ground spawns are now handled correctly
realityincarnate: Lore items in the shared bank no longer trigger conflicts with items in individual inventories
KLS: Fix for Group:: and Raid:: splitexp bonus calculations happening once for every person in the group / raid, resulting in very high numbers for group and non-positive numbers for raid.
Trevius: SoF - Corrected a minor issues with new mounts where they weren't setting helm texture properly.

==05/08/2009==
Derision: Fixed a bug where a pet set to guard would appear not to stop on returning to it's guard spot after being ordered to attack.
Derision: Fixed a bug where a mob aggroed would sometimes appear to run past it's target.

==05/07/2009==
Trevius: (Erde) The Web Tool now shows the name of the process running each Dynamic zone (example: dynamic_01)

==05/06/2009==
Angelox: Bots: Added command '#bot shrinkme' requires Shaman or Beastlord (defaults to Shaman). 
Derision: Added redux_aa2, redux_rate2 fields to aa_actions.
Derision: Improved Hasty Exit should now reduce the reuse time of Escape.
Derision: The reuse timer in the AA window now shows the reuse time reduced by applicable AAs.
	  (although if you purchase an AA that reduces the reuse time, you must camp before the reduced reuse time will be updated).
